bebytes/tests/compile_time/vectors/vec_not_last_no_size.rs
// This test verifies that a Vec field without size specification
// must be the last field in the struct.

use bebytes::BeBytes;
#[cfg(not(feature = "std"))]
extern crate alloc;

#[derive(BeBytes, Debug, PartialEq)]
struct VecNotLastNoSize {
    // Error: Vec without size must be last field
    data: Vec<u8>,
    footer: u32,
}

fn main() {}